--- a/BurgerPrime/src/main/resources/templates/index.html
+++ b/BurgerPrime/src/main/resources/templates/index.html
@@ -5,10 +5,11 @@
     <link rel="icon" href="../static/img/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <title>BurgerPrime</title>
 </head>
 <body class="bg-mainColor text-white bg-stone-900">
     <header class=" mx-auto bg-red-500 w-full fixed">
-        <div class="flex justify-around pb-5 pt-5">
+        <div class="flex justify-around pb-5 pt-5 round-lg z-10">
             <div class=" ">
                 <button class=" right-0 top-0 h-full px-4 bg-stone-800 text-white rounded-lg hover:bg-stone-900">Добавить товар</button>
             </div>
@@ -23,36 +24,48 @@
                 <span class="text-2xl"><img class="" src="../static/img/default.png"></span>
                 <p class="pt-3">Admin</p>
             </div>
-
         </div>
     </header>
     <main class="w-full mx-auto pt-40">
-        <div class="flex justify-around pl-60 grid grid-cols-4 gap-x-20 gap-y-10">
-            <div class="">
-                <img src="../static/img/ico.png">
-                <span >Название продукта</span><br>
-                <span >Цена</span>
+        <div class="flex justify-around pl-20 grid grid-cols-4 gap-x-20 gap-y-10">
+            <div class="relative w-80">
+                <img src="../static/img/ico1.png" alt="Картинка" class="w-full h-auto" />
+                <div class="absolute flex items-center justify-center text-white grid font-bold">
+                    <span >Название продукта</span>
+                    <span >Цена</span>
+                </div>
             </div>
-            <div class="">
-                <img src="../static/img/ico.png">
-                <span >Название продукта</span><br>
-                <span >Цена</span>
+            <div class="relative w-80">
+                <img src="../static/img/ico1.png" alt="Картинка" class="w-full h-auto" />
+                <div class="absolute flex items-center justify-center text-white grid font-bold">
+                    <span >Название продукта</span>
+                    <span >Цена</span>
+                </div>
             </div>
-            <div class="">
-                <img src="../static/img/ico.png">
-                <span >Название продукта</span><br>
-                <span >Цена</span>
+            <div class="relative w-80">
+                <img src="../static/img/ico1.png" alt="Картинка" class="w-full h-auto" />
+                <div class="absolute flex items-center justify-center text-white grid font-bold">
+                    <span >Название продукта</span>
+                    <span >Цена</span>
+                </div>
             </div>
-            <div class="">
-                <img src="../static/img/ico.png">
-                <span >Название продукта</span><br>
-                <span >Цена</span>
+            <div class="relative w-80">
+                <img src="../static/img/ico1.png" alt="Картинка" class="w-full h-auto" />
+                <div class="absolute flex items-center justify-center text-white grid font-bold">
+                    <span >Название продукта</span>
+                    <span >Цена</span>
+                </div>
             </div>
         </div>
     </main>
-    <footer class="flex bg-stone-1000 text-white justify-around pt-200 w-full mx-auto">
-        <div class="text-2xl ">© 2023</div>
-        <div class="text-2xl ">Contacts:</div>
+    <footer class="flex bg-black text-white justify-around mt-190 pt-10 pb-10 w-full mx-auto">
+        <div class="text-2xl ">
+            <p>© 2025</p>
+        </div>
+        <div class="text-2xl ">
+            <p>Contacts:</p>
+            <p>+7 999 999 99 99</p>
+        </div>
     </footer>
 </body>
 </html>
