--- a/BurgerPrime/src/main/resources/templates/index.html
+++ b/BurgerPrime/src/main/resources/templates/index.html
@@ -8,24 +8,24 @@
     <title>BurgerPrime</title>
 </head>
 <body class="bg-mainColor text-white bg-stone-900">
-    <header class=" mx-auto bg-red-500 w-full fixed">
-        <div class="flex justify-around pb-5 pt-5 round-lg z-10">
-            <div class=" ">
-                <button class=" right-0 top-0 h-full px-4 bg-stone-800 text-white rounded-lg hover:bg-stone-900">Добавить товар</button>
-            </div>
-            <div class="">
-                <span class="w-10 h-10"><img src="../static/img/ico.png"></span>
-            </div>
-            <div class="flex justify-center relative pr- w-200">
-                <input class="w-full pl-4 pr-20 py-3 border rounded hover:border-stone-800 type="text placeholder="Поиск товаров" />
-                <button class="absolute right-0 top-0 h-full px-4 bg-stone-800 text-white rounded-lg hover:bg-stone-900">Нажать</button>
-            </div>
-            <div class="flex h-10 justify-start w-30">
-                <span class="text-2xl"><img class="" src="../static/img/default.png"></span>
-                <p class="pt-3">Admin</p>
-            </div>
+<header class="border-b border-white-500 bg-neutral-700 w-full fixed top-0 z-50">
+    <div class="flex items-center justify-between px-4 py-3">
+
+        <div class="flex-shrink-0 pr-110 pl-10">
+            <a><span class="w-10 h-10"><img src="../static/img/ico.png" alt="Иконка"></span></a>
         </div>
-    </header>
+
+        <div class="flex relative justify-center w-200 h-10 flex-1 mx-4">
+            <input class="w-195 cursor-pointer h-10 absolute px-4 border rounded hover:border-stone-800" type="text" placeholder="Поиск товаров" />
+            <button type="submit" class="border border-black hover:border-white cursor-pointer absolute ml-174 top-0 h-full px-4 bg-green-300 text-stone-800 rounded-lg">Нажать</button>
+        </div>
+
+        <div class="flex items-center space-x-2 flex-shrink-0 pl-95 pr-10">
+            <img class="w-10 h-10 rounded-full" src="../static/img/default.png" alt="Пользователь">
+            <p class="pt-1 text-xl">Admin</p>
+        </div>
+    </div>
+</header>
     <main class="w-full mx-auto pt-40">
         <div class="flex justify-around pl-20 grid grid-cols-4 gap-x-20 gap-y-10">
             <div class="relative w-80">
